Added Customer object and refactored using DomainObject

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,16 @@
           th:href="@{css/spring-core.css}" rel="stylesheet" media="screen"/>
 </head>
 <body>
-<h1>Hello World</h1>
-<h2>This is a Thymeleaf index page. This is my changed page.</h2>
+<div class="container">
+    <h1>Hello World</h1>
+
+    <h2>This is my Thymeleaf index page.</h2>
+
+    <ul>
+        <li><a href="product/list">Products</a></li>
+        <li><a href="customer/list">Customers</a></li>
+    </ul>
+
+</div>
 </body>
 </html>
