Added property validation for username

--- a/src/main/resources/templates/customer/customerform.html
+++ b/src/main/resources/templates/customer/customerform.html
@@ -19,9 +19,15 @@
 
     <h2>Customer Details</h2>
     <div>
-        <form class="form-horizontal" th:object="${customer}" th:action="@{/customer}" method="post">
+        <form class="form-horizontal" th:object="${customerForm}" th:action="@{/customer}" method="post">
             <!--<input type="hidden" th:field="*{id}"/>-->
             <!--<input type="hidden" th:field="*{version}"/>-->
+            <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+                <p>Errors:</p>
+                <ul>
+                    <li th:each="err : ${#fields.errors('*')}" th:text="${err}">Validation Error</li>
+                </ul>
+            </div>
             <input type="hidden" th:field="*{userId}"/>
             <input type="hidden" th:field="*{userVersion}"/>
             <input type="hidden" th:field="*{customerId}"/>
