--- a/src/main/resources/templates/customer/customerform.html
+++ b/src/main/resources/templates/customer/customerform.html
@@ -23,7 +23,7 @@
             <!--<input type="hidden" th:field="*{id}"/>-->
             <!--<input type="hidden" th:field="*{version}"/>-->
             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
-                <p>Errors:</p>
+                <p>Please Correct values in the error below</p>
                 <ul>
                     <li th:each="err : ${#fields.errors('*')}" th:text="${err}">Validation Error</li>
                 </ul>
@@ -32,10 +32,15 @@
             <input type="hidden" th:field="*{userVersion}"/>
             <input type="hidden" th:field="*{customerId}"/>
             <input type="hidden" th:field="*{customerVersion}"/>
-            <div class="form-group">
+            <div class="form-group" th:class="${#fields.hasErrors('userName')} ? 'form-group has-error': 'form-group' ">
                 <label class="col-sm-2 control-label">User Name:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{userName}"/>
+                    <input type="text" class="form-control" th:field="*{userName}" th:errorClass = "has-error"/>
+                    <span class="help-block">
+                        <ul>
+                            <li th:each="err: ${#fields.errors('userName')}" th:text ="${err}"></li>
+                        </ul>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
@@ -62,10 +67,16 @@
                     <input type="text" class="form-control" th:field="*{lastName}"/>
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" th:class="${#fields.hasErrors('email')} ? 'form-group has-error' : 'form-group'">
                 <label class="col-sm-2 control-label">Email:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{email}"/>
+                    <input type="text" class="form-control" th:field="*{email}" th:errorClass="has-error"/>
+
+                    <span class="help-block">
+                        <ul>
+                            <li th:each="err: ${#fields.errors('email')}" th:text="${err}"/>
+                        </ul>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
